<resources>
    <string name="app_name">SprogGo</string>
    <string name="subscription_key">757d46ad05f4420d9e77867743c63f7b</string>
    <string name="subscription_apiroot">https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key to source file \"app/res/values/strings.xml\" to enable Vision API calls.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_analyze">Analyze Image</string>
    <string name="title_activity_analyze_domain">Analyze Image In Domain</string>
    <string name="title_activity_describe">Describe Image</string>
    <string name="title_activity_recognize">Recognize Text</string>
    <string name="title_activity_handwriting_recognize">Recognize Handwriting Text</string>
    <string name="title_activity_thumbnail">Thumbnail Image</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login or create account</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_choose_language">ChooseLanguageActivity</string>
    <string name="main_drawer_item">Start Learning!</string>
    <string name="my_list_drawer_item">My List</string>
    <string name="achievements_drawer_item">Achievements</string>
    <string name="change_language_drawer_item">Change Language</string>
    <string name="about_drawer_item">About</string>
    <string name="log_out_drawer_item">Log out</string>

    <string name="sproggo_description">A fun game to expand your vocabulary \nin a foreign language!</string>
    <string name="sproggo_name">SprogGo</string>
    <string name="action_create_account_short">Create account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
